<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trip.planner.NewCarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addCar_textInputLayout_companyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="8dp"
            android:tag="companyName">

            <AutoCompleteTextView
                android:id="@+id/addCar_autoCompleteTextView_companyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newCar_companyName"
                android:tag="companyName"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/addCar_textInputLayout_confirmationNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="8dp"
            android:tag="confirmationNum">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addCar_textInputEditText_confirmationNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmation"
                android:tag="confirmationNum"/>
        </android.support.design.widget.TextInputLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondary"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/newCar_pickUp"
            android:textAllCaps="true" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/addCar_textInputLayout_pickUpLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/margin_extra"
            android:layout_marginEnd="8dp"
            android:tag="pickUpLocation">

            <AutoCompleteTextView
                android:id="@+id/addCar_textInputAutoComplete_pickUpLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:tag="pickUpLocation"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addCar_textInputLayout_pickUpDate"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="8dp"
                android:tag="pickUpDate">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/addCar_textInputEditText_pickUpDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/newCar_date"
                    android:tag="pickUpDate"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addCar_textInputLayout_pickUpTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="8dp"
                android:tag="pickUpTime">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/addCar_textInputEditText_pickUpTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/newCar_time"
                    android:tag="pickUpTime"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondary"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/newCar_dropOff"
            android:textAllCaps="true" />
        <Switch
            android:id="@+id/addCar_sameLocation_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="@dimen/margin_extra"
            android:layout_marginEnd="8dp"
            android:checked="true"
            android:hint="@string/newCar_dropOffSameAsPickup" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addCar_textInputLayout_dropOffLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="8dp"
            android:tag="dropOffLocation">

            <AutoCompleteTextView
                android:id="@+id/addCar_textInputAutoComplete_dropOffLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:tag="dropOffLocation"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addCar_textInputLayout_dropOffDate"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="8dp"
                android:tag="dropOffDate">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/addCar_textInputEditText_dropOffDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/newCar_date"
                    android:tag="dropOffDate"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addCar_textInputLayout_dropOffTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="8dp"
                android:tag="dropOffTime">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/addCar_textInputEditText_dropOffTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/newCar_time"
                    android:tag="dropOffTime"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/addCar_textInputLayout_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="8dp"
            android:tag="notes" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addCar_textInputEditText_notes"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="start"
                android:hint="@string/newCar_notes"
                android:inputType="textMultiLine"
                android:tag="notes" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>