<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newTripLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trip.planner.NewTripActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/newTrip_textInputLayout_destination"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/margin_extra"
        android:layout_marginEnd="8dp"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tag="destination">

        <AutoCompleteTextView
            android:id="@+id/newTrip_autoCompleteTextView_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newTrip_destination"
            android:textColor="@color/colorPrimaryDark"
            android:tag="destination"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/newTrip_textInputLayout_depart"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="8dp"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTrip_textInputLayout_destination"
        android:tag="departure">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/newTrip_textInputEditText_departureDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/newTrip_departDate"
            android:tag="departure"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/newTrip_textInputLayout_return"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTrip_textInputLayout_depart"
        android:tag="return">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/newTrip_textInputEditText_returnDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/newTrip_returnDate"
            android:tag="return"/>
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>